2007-04-23  Armin Burgmeier  <armin@openismus.com>

	* glom/glade.glom: Fixed the dialog so that the recent chooser is
	below the text and in its own frame.

	* glom/application.cc: Hide the recent chooser when they are no
	recently used items.

2007-04-23  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* icons/16x16/Makefile.am:
	* icons/22x22/Makefile.am:
	* icons/24x24/Makefile.am:
	* icons/32x32/Makefile.am:
	* icons/48x48/Makefile.am:
	* icons/Makefile.am:
	* icons/scalable/Makefile.am: Used build rules like the ones in totem, 
	to install these icons.

2007-04-23  Andreas Nilsson  <nisses.mail@home.se>

	* icons/16x16/glom.png
	* icons/16x16/glom.svg
	* icons/22x22/glom.png
	* icons/22x22/glom.svg
	* icons/24x24/glom.png
	* icons/32x32/glom.png
	* icons/32x32/glom.svg
	* icons/48x48/glom.png
	* icons/scalable/glom.svg: New icons following the tango style guidelines.

2007-04-22  Armin Burgmeier  <armin@openismus.com>

	* glom/application.cc:
	* glom/glom.glade: Added a RecentChooser widget to the initial dialog
	that allows to open quickly a recently used file, as requested in 
	bug #349355.

	* configure.in: Depend on gtkmm-2.10 to make use of the new
	RecentChooser API in GTK+.

	However, this needs some more work to make it look less awkward. murrayc.

2007-04-10  Armin Burgmeier  <armin@openismus.om>

	* glom/libglom/document/document_glom.cc: Added support for a new
	example rows format where the value of each field is identified by the
	field name rather than the field index, to be more robust against
	changes.

	* glom/libglom/utils.cc (string_separate): For each quoted occurence,
	do no longer put an empty string in the result vector when
	ignore_quoted_separator is set.

2007-04-01  Murray Cumming  <murrayc@murrayc.com>

	po/en_GB.po: Restore the date printf format that was removed by 
	David Lodge <dave@cirt.net> on 2006-09-12.
	This date format translation corrects the parsing and display of 
	4-digit dates.
	Bug #425116
